# egisai-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  nightly-install.yml  release.yml
src/egisai/: __init__.py  _access.py  _auto_agent.py  _backend.py  _client.py  _config.py  _context.py  _evaluator.py  _events.py  _gateway.py  _init.py  _logger.py  _output_signals.py  _policy_cache.py  _redact.py  _refresher.py  _routing.py  _run.py  _runtime.py
src/egisai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/egisai/_patches/: __init__.py  _common.py  _framework.py  agno.py  anthropic.py  autogen.py  bedrock_agent.py  bedrock_runtime.py  claude_agent_sdk.py  crewai.py  genai.py  google.py  google_adk.py  http.py  langchain.py  langgraph.py  llamaindex.py  mcp_server.py  openai.py  openai_agents.py  pydantic_ai.py  smolagents.py  strands.py
src/egisai/policy/: __init__.py  _pii_helpers.py  _pii_loader.py  _pii_recognizers.py  _pii_taxonomy.py  _regex_safe.py  engine.py  pii.py  semantic.py
tests/: conftest.py  test_access.py  test_agent_descriptor_excerpt.py  test_applies_to_surfaces.py  test_audit_drops_and_diagnostics.py  test_auto_agent.py  test_bedrock_stale_id_regression.py  test_before_after_each_llm_and_tool.py  test_block_stub_provider_sdk_shape.py  test_claude_agent_sdk_governance.py  test_claude_agent_sdk_posttooluse.py  test_claude_agent_sdk_pretooluse.py  test_compositional_policy.py  test_cross_side_evaluators.py  test_dual_decision_audit.py  test_egisai_client.py  test_enforcement_matrix.py  test_enforcement_status_and_previews.py  test_framework_audit.py  test_framework_patches.py  test_framework_signatures.py  test_gateway_mode.py  test_http_fallback_url_filter.py  test_identity_resolver.py  test_identity_stress.py  test_init.py  test_label_redact_and_safe_previews.py  test_lazy_app_registration.py  test_nested_calls_no_duplicate_logs.py  test_openai_per_tool_waterfall.py  test_openai_streaming_stub.py  test_openai_with_raw_response.py  test_output_extractor_audit.py  test_output_side_policies.py  test_patches.py  test_patches_genai.py  test_phase_filtering.py  test_phase_ordering_and_pii_robustness.py  test_pii_blocking.py  test_pii_reserved_domains.py  (+29 more)
