[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egisai"
version = "0.13.2"
description = "Native runtime governance SDK for AI agents — import egisai; egisai.init() and you're protected."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "EgisAI", email = "soheil@egisai.co" }]
maintainers = [{ name = "EgisAI", email = "soheil@egisai.co" }]
keywords = [
  "ai-agents",
  "ai-governance",
  "ai-safety",
  "guardrails",
  "policy",
  "runtime",
  "compliance",
  "openai",
  "anthropic",
  "gemini",
  "soc2",
  "iso27001",
  "pii",
  "prompt-injection",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]

# Pin minimum versions aggressively for stable supply chain. Upper
# caps keep us out of major-version-bump breakage that hits all
# customers simultaneously when a dependency ships a 2.0. We only
# upper-cap the dependencies whose 1.x → 2.x migrations have a
# track record of breaking everyone (httpx, pydantic).
dependencies = [
  "httpx>=0.27.0,<1.0",
  "pydantic>=2.9.0,<3.0",
]

[project.optional-dependencies]
# Adapters install themselves at runtime if these are present, but
# you can pin them via extras for reproducible installs. We keep
# minimums tight (every version we've actually verified against)
# but leave the upper bound unpinned so customers can use the
# vendor's latest SDK without us blocking them — the vendor's own
# wire format is much more stable than the SDK wrapper.
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.40.0"]
# ``google`` installs ``google-genai``. The ``google-legacy`` extra
# installs ``google-generativeai`` for applications still using that
# package. The two extras are independent and can be combined.
google = ["google-genai>=1.0.0"]
google-legacy = ["google-generativeai>=0.8.0"]
all = [
  "openai>=1.40.0",
  "anthropic>=0.40.0",
  "google-genai>=1.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0",
  "pytest-asyncio>=0.24.0,<1.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "respx>=0.21.1,<1.0",
  # Build / release tooling
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://egisai.co"
Documentation = "https://docs.egisai.co"
Repository = "https://github.com/EgisLabs/egisai-sdk"
Issues = "https://github.com/EgisLabs/egisai-sdk/issues"
Changelog = "https://github.com/EgisLabs/egisai-sdk/blob/main/CHANGELOG.md"
"Security Advisories" = "https://github.com/EgisLabs/egisai-sdk/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["egisai*"]

[tool.setuptools.package-data]
"egisai" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
